syntax = "proto3";

package variable.v1;

option go_package = "dev-tools-services/gen/variable/v1;variablev1";

service VariableService {
  rpc CreateVariable(CreateVariableRequest) returns (CreateVariableResponse);
  rpc GetVariable(GetVariableRequest) returns (GetVariableResponse);
  rpc GetVariables(GetVariablesRequest) returns (GetVariablesResponse);
  rpc UpdateVariable(UpdateVariableRequest) returns (UpdateVariableResponse);
  rpc DeleteVariable(DeleteVariableRequest) returns (DeleteVariableResponse);
}

message Variable {
  string id = 1;
  string name = 2;
  string value = 3;
  bool enabled = 4;
  string description = 5;
}

message CreateVariableRequest {
  string environment_id = 1;
  Variable variable = 2;
}

message CreateVariableResponse {
  string id = 1;
}

message GetVariableRequest {
  string id = 1;
}

message GetVariableResponse {
  Variable variable = 1;
}

message GetVariablesRequest {
  string environment_id = 1;
}

message GetVariablesResponse {
  repeated Variable variables = 1;
}

message UpdateVariableRequest {
  Variable variable = 1;
}

message UpdateVariableResponse {
}

message DeleteVariableRequest {
  string id = 1;
}

message DeleteVariableResponse {
}
